[package]
name = "slam_engine"
edition = "2018"
version = "0.1.0"
authors = ["Hans W. Uhlig <huhlig@gmail.com>"]
description = "Statistical and Linear Algebra Machine (SLAM) Core Engine"
license = "Apache2 OR MIT"
keywords = ["slam", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
